Reproductor videos youtube accesible integrado

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -319,6 +319,31 @@ file.edit.titleImagen=Title
 file.edit.altTextImage=Alternative text
 file.edit.change=Change
 
+#Youtube Player
+file.player.yt.button.play=Play video
+file.player.yt.button.mute=Activate / deactivate sound to the video
+file.player.yt.button.volDown=Volume down to the video
+file.player.yt.button.volUp=Volume up to the video
+file.player.yt.button.rew=Rewind thirty seconds the video
+file.player.yt.button.fwd=Forward thirty seconds the video
+file.player.yt.button.pause=Pause video
+file.player.yt.dt.position=Position
+file.player.yt.dd.seconds=seconds
+file.player.yt.dt.duration=Duration
+file.player.yt.dd.unknown=Unknown
+file.player.yt.a.skip_video=Skip the video
+file.player.yt.a.watch_yt=Watch in youtube the video
+file.player.yt.a.open_new_window=Open in new window
+file.player.yt.alert.video_finished=Video finished.
+file.player.yt.alert.playing=Playing video.
+file.player.yt.alert.paused=Paused video.
+file.player.yt.alert.loading=Loading video.
+file.player.yt.alert.sound_activated=Sound activate.
+file.player.yt.alert.sound_deactivated=Sound deactivate.
+file.player.yt.alert.volume_max=Volume level is maximum.
+file.player.yt.alert.volume_adjust=Volume level is adjusted to
+file.player.yt.alert.volume_min=Volume level is minimum.
+
 #******************
 # confirmation msg
 #******************
