--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -336,6 +336,31 @@ file.edit.titleImagen=Title
 file.edit.altTextImage=Alternative text
 file.edit.change=Change
 
+#Youtube Player
+file.player.yt.button.play=Reproducir el video
+file.player.yt.button.mute=Activar / desactivar el sonido del video
+file.player.yt.button.volDown=Subir el volumen del video
+file.player.yt.button.volUp=Bajar el volumen del video
+file.player.yt.button.rew=Retroceder treinta segundos el video
+file.player.yt.button.fwd=Avanzar treinta segundos el video
+file.player.yt.button.pause=Pausar video
+file.player.yt.dt.position=Posición
+file.player.yt.dd.seconds=segundos
+file.player.yt.dt.duration=Duración
+file.player.yt.dd.unknown=Desconocido
+file.player.yt.a.skip_video=Saltar el video
+file.player.yt.a.watch_yt=Ver en youtube el video
+file.player.yt.a.open_new_window=Se abrirá en una ventana nueva
+file.player.yt.alert.video_finished=Vídeo finalizado.
+file.player.yt.alert.playing=Reproduciendo vídeo.
+file.player.yt.alert.paused=Pausado.
+file.player.yt.alert.loading=Cargando video.
+file.player.yt.alert.sound_activated=Sonido activado.
+file.player.yt.alert.sound_deactivated=Sonido desactivado.
+file.player.yt.alert.volume_max=El volumen está al máximo.
+file.player.yt.alert.volume_adjust=Volúmen ajustado al
+file.player.yt.alert.volume_min=El volumen está al mínimo.
+
 #******************
 # confirmation msg
 #******************
