--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -313,7 +313,7 @@ file.import.label.select.none=-- Choose type --
 file.import.label.video_url=Video URL
 file.import.label.description=Description
 
-file.edit.title=Edit file information
+file.edit.title=Edit multimedia information
 file.edit.image=Image
 file.edit.titleImagen=Title
 file.edit.altTextImage=Alternative text
