--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -330,11 +330,12 @@ file.import.label.select.none=-- Elige un tipo --
 file.import.label.video_url=URL del video
 file.import.label.description=Descripción
 
-file.edit.title=Edit file information
-file.edit.image=Image
-file.edit.titleImagen=Title
-file.edit.altTextImage=Alternative text
-file.edit.change=Change
+file.edit.title=Editar información multimedia
+file.edit.image=Imagen
+file.edit.titleImagen=Título
+file.edit.altTextImage=Texto alternativo
+file.edit.descTextVideo=Descripción vídeo
+file.edit.change=Cambiar
 
 #Youtube Player
 file.player.yt.button.play=Reproducir el video
