Edit multimedia file finished

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -50,6 +50,7 @@ button.survey_preview=Survey preview
 button.vote=Vote
 button.remove_section=Remove section
 button.hide_section=Hide section
+button.done=Done
 
 button.aria_label.add_content=Add new content
 
