--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -66,6 +66,7 @@ button.survey_preview=Previsualización de la encuesta
 button.vote=Votar
 button.remove_section=Borrar sección
 button.hide_section=Ocultar sección
+button.done=Hecho
 
 button.aria_label.add_content=Añadir nuevo contenido
 
