--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -93,6 +93,8 @@ login.invalid=Invalid username or password
 register.invalid=Invalid username or password
 register.exists.email=This email already exists in the system
 register.exists.username=This username already exists in the system
+label.hidde=Hidde
+label.show=Show
 
 #******************
 # Home
@@ -277,6 +279,7 @@ survey.edit.info.label.project=for project
 survey.edit.info.label.short_description=Short description
 survey.edit.info.label.url=Survey URL
 survey.edit.section.title=Section title
+survey.edit.page.title=Page
 
 #******************
 # Poll
