--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -93,6 +93,8 @@ login.invalid=Nombre de usuario o contraseña invalido
 register.invalid=Nombre de usuario o contraseña invalido
 register.exists.email=Este correo electronico ya existe en el sistema
 register.exists.username=Este nombre de usuario ya existe en el sistema
+label.hidde=Ocultar
+label.show=Mostrar
 
 #******************
 # Home
@@ -277,6 +279,7 @@ survey.edit.info.label.project=para el proyecto
 survey.edit.info.label.short_description=Descripcion corta
 survey.edit.info.label.url=URL de la Encuesta
 survey.edit.section.title=Titulo Seccion
+survey.edit.page.title=Página
 
 #******************
 # Poll
