add page finished and testing remove page

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -57,6 +57,7 @@ button.remove_file=Remove file
 button.remove_video=Remove video
 button.remove_option=Remove option
 button.remove_question=Remove question
+button.remove_pagebreak=Remove page-break
 button.send=Send
 button.login=Login
 button.register=Register
