--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -58,6 +58,7 @@ button.remove_file=Borrar fichero
 button.remove_video=Borrar video
 button.remove_option=Borrar opción
 button.remove_question=Borrar pregunta
+button.remove_pagebreak=Borrar salto de página
 button.send=Enviar
 button.login=Iniciar sesión
 button.register=Registrar
