ficheros adjuntos a opciones

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -188,6 +188,7 @@ question.edit.statementSetting.title=Statements settings
 question.edit.description.title=Description / Instructions
 question.edit.description.aria_label=Description question
 question.edit.files.title=Question Files
+question.edit.files.option.title=Option Files
 question.edit.response_settings.title=Response settings
 question.edit.custom_settings.title=Custom options
 question.edit.type=Type
@@ -383,6 +384,7 @@ accesibility.question.matrix.input.column=Insert column
 accesibility.question.matrix.input.row=Insert row
 accesibility.question.option=Insert option
 accesibility.question.remove.option=Remove option
+accesibility.question.addfile.option=Add file to option
 accesibility.question.add.option=Add option
 accesibility.question.image=Question image
 accesibility.question.longtextAnswer=Textarea to input your answer
