--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -188,6 +188,7 @@ question.edit.statementSetting.title=Configuración de la pregunta
 question.edit.description.title=Descripción / Instrucciones
 question.edit.description.aria_label=Descripción de la pregunta
 question.edit.files.title=Ficheros de la pregunta
+question.edit.files.option.title=Ficheros de la opcion
 question.edit.response_settings.title=Configuración respuesta
 question.edit.custom_settings.title=Opciones de personalización
 question.edit.type=Tipo
@@ -384,6 +385,7 @@ accesibility.question.matrix.input.column=Introducir texto para columna
 accesibility.question.matrix.input.row=Introducir texto para fila
 accesibility.question.option=Introducir texto para opción
 accesibility.question.remove.option=Eliminar opción
+accesibility.question.addfile.option=Añadir fichero a opción
 accesibility.question.add.option=Añadir opción
 accesibility.question.image=Imagen de la pregunta
 accesibility.question.longtextAnswer=Textarea para introducir tu respuesta
