developing question filter

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -47,8 +47,12 @@ button.add_file=Add new file
 button.add_option=Add option
 button.add_row=Add row
 button.add_column=Add column
+button.add_dependence=Add dependences
+button.add_logic=Add logic
 button.cancel=Cancel
 button.close=Close
+button.close.dependences=Close add dependences
+button.close.logic=Close add logic
 button.create=Create
 button.create_new=+ Create new
 button.hide_question=Hide question
@@ -189,11 +193,17 @@ question.edit.placeholder.option=Option
 question.edit.aria_label.option=Option title
 question.edit.statementSetting.title=Statements settings
 question.edit.description.title=Description / Instructions
+question.edit.dependences.title=Dependences and logic
 question.edit.description.aria_label=Description question
 question.edit.files.title=Question Files
 question.edit.response_settings.title=Response settings
 question.edit.custom_settings.title=Custom options
 question.edit.type=Type
+
+question.edit.logic.option.label=If answer to this question is
+question.edit.logic.option.goto.label=then
+question.edit.logic.option.goto.continue=Continue
+question.edit.dependence.action.label=Action on the question
 
 question.edit.matrix.type.simple=Simple
 question.edit.matrix.type.multiple=Multiple
