--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -48,8 +48,12 @@ button.add_file=Agregar fichero
 button.add_option=Agregar opción
 button.add_row=Añadir fila
 button.add_column=Añadir columna
+button.add_dependence=Añadir dependencias
+button.add_logic=Añadir lógica
 button.cancel=Cancelar
 button.close=Cerrar
+button.close.dependences=Cerrar añadir dependencias
+button.close.logic=Cerrar añadir lógica
 button.create=Crear
 button.create_new=+ Crear nuevo
 button.hide_question=Ocultar pregunta
@@ -189,11 +193,17 @@ question.edit.placeholder.option=Opcion
 question.edit.aria_label.option=Titulo de la opción
 question.edit.statementSetting.title=Configuración de la pregunta
 question.edit.description.title=Descripción / Instrucciones
+question.edit.dependences.title=Dependencias y lógica
 question.edit.description.aria_label=Descripción de la pregunta
 question.edit.files.title=Ficheros de la pregunta
 question.edit.response_settings.title=Configuración respuesta
 question.edit.custom_settings.title=Opciones de personalización
 question.edit.type=Tipo
+
+question.edit.logic.option.label=Si la respuesta a esta pregunta es
+question.edit.logic.option.goto.label=entonces
+question.edit.logic.option.goto.continue=Continuar
+question.edit.dependence.action.label=Acción sobre la pregunta
 
 question.edit.matrix.type.simple=Simple
 question.edit.matrix.type.multiple=Multiple
