maquetado filtros dependencias

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -204,6 +204,14 @@ question.edit.logic.option.label=If answer to this question is
 question.edit.logic.option.goto.label=then
 question.edit.logic.option.goto.continue=Continue
 question.edit.dependence.action.label=Action on the question
+question.edit.dependence.action.option.hide=Hide
+question.edit.dependence.action.option.show=Show
+question.edit.dependence.question.label_hidden=Apply the action on
+question.edit.dependence.question.label_shown=this quiestion if response to
+question.edit.dependence.question.label_help_hidden=(Select question)
+question.edit.dependence.option.label_hidden=Question response
+question.edit.dependence.option.label_shown=was
+question.edit.dependence.option.label_help_hidden=(Select option)
 
 question.edit.matrix.type.simple=Simple
 question.edit.matrix.type.multiple=Multiple
