--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -204,6 +204,14 @@ question.edit.logic.option.label=Si la respuesta a esta pregunta es
 question.edit.logic.option.goto.label=entonces
 question.edit.logic.option.goto.continue=Continuar
 question.edit.dependence.action.label=Acción sobre la pregunta
+question.edit.dependence.action.option.hide=Ocultar
+question.edit.dependence.action.option.show=Mostrar
+question.edit.dependence.question.label_hidden=Aplicar la acción en
+question.edit.dependence.question.label_shown=esta pregunta si la respuesta para
+question.edit.dependence.question.label_help_hidden=(Selecciona una pregunta)
+question.edit.dependence.option.label_hidden=Respuesta a la pregunta
+question.edit.dependence.option.label_shown=fue
+question.edit.dependence.option.label_help_hidden=(Selecciona una respuesta)
 
 question.edit.matrix.type.simple=Simple
 question.edit.matrix.type.multiple=Multiple
