json acabado y carga del select de preguntas en dependencias

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -208,10 +208,11 @@ question.edit.dependence.action.option.hide=Hide
 question.edit.dependence.action.option.show=Show
 question.edit.dependence.question.label_hidden=Apply the action on
 question.edit.dependence.question.label_shown=this quiestion if response to
-question.edit.dependence.question.label_help_hidden=(Select question)
+question.edit.dependence.question.label_help_hidden=Select question
 question.edit.dependence.option.label_hidden=Question response
 question.edit.dependence.option.label_shown=was
 question.edit.dependence.option.label_help_hidden=(Select option)
+question.edit.logic.no_option=This question has no options yet.
 
 question.edit.matrix.type.simple=Simple
 question.edit.matrix.type.multiple=Multiple
