--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -208,10 +208,11 @@ question.edit.dependence.action.option.hide=Ocultar
 question.edit.dependence.action.option.show=Mostrar
 question.edit.dependence.question.label_hidden=Aplicar la acción en
 question.edit.dependence.question.label_shown=esta pregunta si la respuesta para
-question.edit.dependence.question.label_help_hidden=(Selecciona una pregunta)
+question.edit.dependence.question.label_help_hidden=Selecciona una pregunta
 question.edit.dependence.option.label_hidden=Respuesta a la pregunta
 question.edit.dependence.option.label_shown=fue
-question.edit.dependence.option.label_help_hidden=(Selecciona una respuesta)
+question.edit.dependence.option.label_help_hidden=Selecciona una respuesta
+question.edit.logic.no_option=Esta pregunta no tiene opciones aún.
 
 question.edit.matrix.type.simple=Simple
 question.edit.matrix.type.multiple=Multiple
