--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -47,7 +47,7 @@ button.add_file=Add new file
 button.add_option=Add option
 button.add_row=Add row
 button.add_column=Add column
-button.add_dependence=Add dependences
+button.add_dependence=Add dependence
 button.add_logic=Add logic
 button.cancel=Cancel
 button.close=Close
@@ -203,6 +203,7 @@ question.edit.type=Type
 question.edit.logic.option.label=If answer to this question is
 question.edit.logic.option.goto.label=then
 question.edit.logic.option.goto.continue=Continue
+question.edit.dependence.legend=dependence to the question:
 question.edit.dependence.action.label=Action on the question
 question.edit.dependence.action.option.hide=Hide
 question.edit.dependence.action.option.show=Show
@@ -211,8 +212,9 @@ question.edit.dependence.question.label_shown=this quiestion if response to
 question.edit.dependence.question.label_help_hidden=Select question
 question.edit.dependence.option.label_hidden=Question response
 question.edit.dependence.option.label_shown=was
-question.edit.dependence.option.label_help_hidden=(Select option)
+question.edit.dependence.option.label_help_hidden=Select option
 question.edit.logic.no_option=This question has no options yet.
+
 
 question.edit.matrix.type.simple=Simple
 question.edit.matrix.type.multiple=Multiple
