--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -48,7 +48,7 @@ button.add_file=Agregar fichero
 button.add_option=Agregar opción
 button.add_row=Añadir fila
 button.add_column=Añadir columna
-button.add_dependence=Añadir dependencias
+button.add_dependence=Añadir dependencia
 button.add_logic=Añadir lógica
 button.cancel=Cancelar
 button.close=Cerrar
@@ -203,6 +203,7 @@ question.edit.type=Tipo
 question.edit.logic.option.label=Si la respuesta a esta pregunta es
 question.edit.logic.option.goto.label=entonces
 question.edit.logic.option.goto.continue=Continuar
+question.edit.dependence.legend=dependencia para la pregunta:
 question.edit.dependence.action.label=Acción sobre la pregunta
 question.edit.dependence.action.option.hide=Ocultar
 question.edit.dependence.action.option.show=Mostrar
