Filtrado de preguntas en proceso

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -207,8 +207,12 @@ question.edit.dependence.legend=dependence to the question:
 question.edit.dependence.action.label=Action on the question
 question.edit.dependence.action.option.hide=Hide
 question.edit.dependence.action.option.show=Show
+question.edit.dependence.condition.label=Logical join condition
+question.edit.dependence.condition.option.and=And
+question.edit.dependence.condition.option.or=Or
 question.edit.dependence.question.label_hidden=Apply the action on
-question.edit.dependence.question.label_shown=this quiestion if response to
+question.edit.dependence.question.label_shown=Hide this question if the response to
+question.edit.dependence.question.label_next_shown=the response to
 question.edit.dependence.question.label_help_hidden=Select question
 question.edit.dependence.option.label_hidden=Question response
 question.edit.dependence.option.label_shown=was
