--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -207,8 +207,12 @@ question.edit.dependence.legend=dependencia para la pregunta:
 question.edit.dependence.action.label=Acción sobre la pregunta
 question.edit.dependence.action.option.hide=Ocultar
 question.edit.dependence.action.option.show=Mostrar
+question.edit.dependence.condition.label=Condición lógica de unión
+question.edit.dependence.condition.option.and=Y
+question.edit.dependence.condition.option.or=O
 question.edit.dependence.question.label_hidden=Aplicar la acción en
-question.edit.dependence.question.label_shown=esta pregunta si la respuesta para
+question.edit.dependence.question.label_shown=Ocultar esta pregunta si la respuesta para
+question.edit.dependence.question.label_next_shown=la respuesta para
 question.edit.dependence.question.label_help_hidden=Selecciona una pregunta
 question.edit.dependence.option.label_hidden=Respuesta a la pregunta
 question.edit.dependence.option.label_shown=fue
