Dependecias y goto termiandas a falta de poner bonito el error de dependencias iguales

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -29,6 +29,7 @@ msg.error.section.title = Type a section name
 
 msg.error.qstatement.text=Type a Question statement
 msg.error.question.title=Type a Question title
+msg.error.dependence-option.text=This question and option were selected in a previous dependence
 
 msg.error.poll.title=Type a Poll title
 msg.error.poll.project=Type a project name
@@ -60,6 +61,7 @@ button.import=Import
 button.remove_file=Remove file
 button.remove_video=Remove video
 button.remove_option=Remove option
+button.remove_dependence=Remove dependence
 button.remove_question=Remove question
 button.remove_pagebreak=Remove page-break
 button.send=Send
@@ -412,6 +414,7 @@ accesibility.question.matrix.input.column=Insert column
 accesibility.question.matrix.input.row=Insert row
 accesibility.question.option=Insert option
 accesibility.question.remove.option=Remove option
+accesibility.question.remove.dependence=Remove dependence
 accesibility.question.add.option=Add option
 accesibility.question.image=Question image
 accesibility.question.longtextAnswer=Textarea to input your answer
