--- a/SurveyTool/WebContent/_locales/lang_en2.properties
+++ b/SurveyTool/WebContent/_locales/lang_en2.properties
@@ -39,6 +39,7 @@ button.hide_question=Hide question
 button.import=Import
 button.remove_file=Remove file
 button.remove_option=Remove option
+button.remove_dependence=Remove dependence
 button.remove_question=Remove question
 button.send=Send
 button.login=Login
@@ -292,6 +293,7 @@ accesibility.question.matrix.input.column= Insert column
 accesibility.question.matrix.input.row= Insert row
 accesibility.question.option=Insert option
 accesibility.question.remove.option=Remove option
+accesibility.question.remove.dependence=Eliminar dependence
 accesibility.question.add.option=Add option
 accesibility.question.image=Question image
 accesibility.question.longtextAnswer= Textarea to input your answer
