--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -30,6 +30,7 @@ msg.error.section.title = Escriba un nombre de sección
 
 msg.error.qstatement.text=Escriba un contenido para la cuestión
 msg.error.question.title=Escriba un Título de la pregunta
+msg.error.dependence-option.text=Esta pregunta y opción fueron seleccionados en otra dependencia
 
 msg.error.poll.title=Escriba un título para la encuesta
 msg.error.poll.project=Escriba un nombre de proyecto
@@ -61,6 +62,7 @@ button.import=Importar
 button.remove_file=Borrar fichero
 button.remove_video=Borrar video
 button.remove_option=Borrar opción
+button.remove_dependence=Borrar dependencia
 button.remove_question=Borrar pregunta
 button.remove_pagebreak=Borrar salto de página
 button.send=Enviar
@@ -412,6 +414,7 @@ accesibility.question.matrix.input.column=Introducir texto para columna
 accesibility.question.matrix.input.row=Introducir texto para fila
 accesibility.question.option=Introducir texto para opción
 accesibility.question.remove.option=Eliminar opción
+accesibility.question.remove.dependence=Eliminar dependencia
 accesibility.question.add.option=Añadir opción
 accesibility.question.image=Imagen de la pregunta
 accesibility.question.longtextAnswer=Textarea para introducir tu respuesta
