archivos buenos salvados

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -299,6 +299,7 @@ survey.new.default.language = Default language
 
 survey.edit.tab.go_edit=Go to edit survey
 survey.edit.title=Edit Survey
+survey.edit.tab.go_statistics=Go to survey statistics
 survey.edit.label.lang_version=Language version
 survey.edit.info.aria_label.display=Display survey info
 survey.edit.info.aria_label.title=Survey title
@@ -453,3 +454,15 @@ survey.type.options=Options
 survey.type.type=Type
 survey.type.example=Example Q.1
 survey.type.option=Option
+
+
+#******************
+# Statistics
+#******************
+statistics.menu.general=General information
+statistics.menu.questions=Questions
+statistics.boxes.numVisits=Number of visits
+statistics.boxes.numAnswers=Number of answers
+statistics.boxes.bounceRateMandatory=Answers for all mandatory questions / visits
+statistics.boxes.bounceRate=Answers for all questions / visits
+statistics.single.title=Received answers
