--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -298,6 +298,7 @@ survey.new.default.language = Lenguaje por defecto
 
 survey.edit.tab.go_edit=Ir a editar encuesta
 survey.edit.title=Editar Encuesta
+survey.edit.tab.go_statistics=Ir a las estadísticas de la encuesta
 survey.edit.label.lang_version=Version lenguaje
 survey.edit.info.aria_label.display=Pantalla de datos de la encuesta
 survey.edit.info.aria_label.title=Titulo encuesta
@@ -453,3 +454,16 @@ survey.type.options=Opciones
 survey.type.type=Tipo
 survey.type.example=Ejemplo P.1
 survey.type.option=Opcion
+
+
+
+#******************
+# Statistics
+#******************
+statistics.menu.general=Información general
+statistics.menu.questions=Preguntas
+statistics.boxes.numVisits=Número de visitantes
+statistics.boxes.numAnswers=Número de respuestas
+statistics.boxes.bounceRate=Respuestas a todas las preguntas obligatorias / Visita
+statistics.boxes.bounceRateMandatory=Respuestas a todas las preguntas / Visita
+statistics.single.title=Respuestas recibidas
