--- a/SurveyTool/WebContent/_locales/lang_en2.properties
+++ b/SurveyTool/WebContent/_locales/lang_en2.properties
@@ -219,6 +219,7 @@ survey.new.placeholder.project=Insert project name_
 
 survey.edit.tab.go_edit=Go to edit survey
 survey.edit.title=Edit Survey
+survey.edit.tab.go_statistics=Go to survey statistics
 survey.edit.label.lang_version=Language version
 survey.edit.info.aria_label.display=Display survey info
 survey.edit.info.aria_label.title=Survey title
@@ -298,3 +299,16 @@ accesibility.question.add.option=Add option
 accesibility.question.image=Question image
 accesibility.question.longtextAnswer= Textarea to input your answer
 accesibility.question.shorttextAnswer= Textarea to input your answer
+
+
+
+#******************
+# Statistics
+#******************
+statistics.menu.general=General information
+statistics.menu.questions=Questions
+statistics.boxes.numVisits=Number of visits
+statistics.boxes.numAnswers=Number of answers
+statistics.boxes.bounceRateMandatory=Answers for all mandatory questions / visits
+statistics.boxes.bounceRate=Answers for all questions / visits
+statistics.single.title=Received answers
