--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -279,6 +279,9 @@ survey.edit.info.label.short_description=Descripcion corta
 survey.edit.info.label.url=URL de la Encuesta
 survey.edit.section.title=Titulo Seccion
 
+survey.fees.label.objective=Objetivo
+survey.fees.label.surveys=encuestas
+
 #******************
 # Poll
 #******************
