update option in goto

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -49,7 +49,7 @@ button.add_option=Add option
 button.add_row=Add row
 button.add_column=Add column
 button.add_dependence=Add dependence
-button.add_logic=Add logic
+button.add_logic=Set logic
 button.cancel=Cancel
 button.close=Close
 button.close.dependences=Close add dependences
