modulo de cuotas, falta parte insertar

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -426,3 +426,10 @@ survey.type.options=Options
 survey.type.type=Type
 survey.type.example=Example Q.1
 survey.type.option=Option
+
+#******************
+# Quota suveys
+#******************
+quota.add.new=Add new Quota
+quota.create.new=Create new cuota
+quota.select= Select quota
