--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -427,3 +427,10 @@ survey.type.options=Opciones
 survey.type.type=Tipo
 survey.type.example=Ejemplo P.1
 survey.type.option=Opcion
+
+#******************
+# Quota suveys
+#******************
+quota.add.new=Añadir nueva cuota
+quota.create.new=Crear nueva cuota
+quota.select= Seleccionar cuota
