Gráficos de estadísticas

--- a/SurveyTool/WebContent/_locales/lang_en2.properties
+++ b/SurveyTool/WebContent/_locales/lang_en2.properties
@@ -219,6 +219,7 @@ survey.new.placeholder.project=Insert project name_
 
 survey.edit.tab.go_edit=Go to edit survey
 survey.edit.title=Edit Survey
+survey.statistic.title=Survey Statistics
 survey.edit.tab.go_statistics=Go to survey statistics
 survey.edit.label.lang_version=Language version
 survey.edit.info.aria_label.display=Display survey info
@@ -305,10 +306,17 @@ accesibility.question.shorttextAnswer= Textarea to input your answer
 #******************
 # Statistics
 #******************
+statistics.title=Statistics results
 statistics.menu.general=General information
 statistics.menu.questions=Questions
 statistics.boxes.numVisits=Number of visits
+statistics.boxes.numStarted=Number of started surveys
+statistics.boxes.bounceRateStarted=Number of Answers / Started surveys
 statistics.boxes.numAnswers=Number of answers
+statistics.boxes.numAnswersMand=Number of answers with all mandatory questions
+statistics.boxes.numAnswersNotMand=Number of answers with all questions
 statistics.boxes.bounceRateMandatory=Answers for all mandatory questions / visits
 statistics.boxes.bounceRate=Answers for all questions / visits
 statistics.single.title=Received answers
+statistics.boxes.numAnswersByOption=Number of answers / Option (%)
+statistics.menu.default=-Choose question-
