--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -296,9 +296,10 @@ survey.new.label.short_description=descripción corta (Opcional)
 survey.new.placeholder.project=Insertar nombre proyecto_
 survey.new.default.language = Lenguaje por defecto
 
-survey.edit.tab.go_edit=Ir a editar encuesta
+survey.edit.tab.go_edit=Ir a la edición de encuestas
 survey.edit.title=Editar Encuesta
-survey.edit.tab.go_statistics=Ir a las estadísticas de la encuesta
+survey.statistic.title=Estadísticas de Encuesta
+survey.edit.tab.go_statistics=Ir a la estadística de la encuesta
 survey.edit.label.lang_version=Version lenguaje
 survey.edit.info.aria_label.display=Pantalla de datos de la encuesta
 survey.edit.info.aria_label.title=Titulo encuesta
@@ -460,10 +461,17 @@ survey.type.option=Opcion
 #******************
 # Statistics
 #******************
+statistics.title=Resultados estadísticos
 statistics.menu.general=Información general
 statistics.menu.questions=Preguntas
 statistics.boxes.numVisits=Número de visitantes
+statistics.boxes.numStarted=Número de encuestas empezadas
+statistics.boxes.bounceRateStarted=Número de respuestas / Encuestas empezadas
 statistics.boxes.numAnswers=Número de respuestas
+statistics.boxes.numAnswersMand=Número de respuestas con todas las preguntas obligatorias
+statistics.boxes.numAnswersNotMand=Número de respuestas con todas las preguntas
 statistics.boxes.bounceRate=Respuestas a todas las preguntas obligatorias / Visita
 statistics.boxes.bounceRateMandatory=Respuestas a todas las preguntas / Visita
 statistics.single.title=Respuestas recibidas
+statistics.boxes.numAnswersByOption=Número de respuestas / Opción (%)
+statistics.menu.default=-Escoge pregunta-
