Bugs de estadísticas corregidos

--- a/SurveyTool/WebContent/_locales/lang_en2.properties
+++ b/SurveyTool/WebContent/_locales/lang_en2.properties
@@ -320,3 +320,4 @@ statistics.boxes.bounceRate=Answers for all questions / visits
 statistics.single.title=Received answers
 statistics.boxes.numAnswersByOption=Number of answers / Option (%)
 statistics.menu.default=-Choose question-
+statistics.matrix.none=None
