--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -475,3 +475,4 @@ statistics.boxes.bounceRateMandatory=Respuestas a todas las preguntas / Visita
 statistics.single.title=Respuestas recibidas
 statistics.boxes.numAnswersByOption=Número de respuestas / Opción (%)
 statistics.menu.default=-Escoge pregunta-
+statistics.matrix.none=Ninguna
