título en estadísticas y cambios de estilo de Nacho

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -465,13 +465,13 @@ statistics.menu.general=General information
 statistics.menu.questions=Questions
 statistics.boxes.numVisits=Number of visits
 statistics.boxes.numStarted=Number of started surveys
-statistics.boxes.bounceRateStarted=Number of Answers / Started surveys
-statistics.boxes.numAnswers=Number of answers
-statistics.boxes.numAnswersMand=Number of answers with all mandatory questions
-statistics.boxes.numAnswersNotMand=Number of answers with all questions
-statistics.boxes.bounceRateMandatory=Answers for all mandatory questions / visits
-statistics.boxes.bounceRate=Answers for all questions / visits
-statistics.single.title=Received answers
-statistics.boxes.numAnswersByOption=Number of answers / Option (%)
+statistics.boxes.bounceRateStarted=Number of Received Responses / Started surveys
+statistics.boxes.numAnswers=Number of received responses
+statistics.boxes.numAnswersMand=Number of received responses with all mandatory questions
+statistics.boxes.numAnswersNotMand=Number of received responses with all questions
+statistics.boxes.bounceRateMandatory=Responses for all mandatory questions / visits
+statistics.boxes.bounceRate=Responses for all questions / visits
+statistics.single.title=Received responses
+statistics.boxes.numAnswersByOption=Number of received responses / Option (%)
 statistics.menu.default=-Choose question-
 statistics.matrix.none=None
