--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -466,13 +466,13 @@ statistics.menu.general=Información general
 statistics.menu.questions=Preguntas
 statistics.boxes.numVisits=Número de visitantes
 statistics.boxes.numStarted=Número de encuestas empezadas
-statistics.boxes.bounceRateStarted=Número de respuestas / Encuestas empezadas
-statistics.boxes.numAnswers=Número de respuestas
-statistics.boxes.numAnswersMand=Número de respuestas con todas las preguntas obligatorias
-statistics.boxes.numAnswersNotMand=Número de respuestas con todas las preguntas
-statistics.boxes.bounceRate=Respuestas a todas las preguntas obligatorias / Visita
-statistics.boxes.bounceRateMandatory=Respuestas a todas las preguntas / Visita
+statistics.boxes.bounceRateStarted=Número de respuestas recibidas / Encuestas empezadas
+statistics.boxes.numAnswers=Número de respuestas recibidas
+statistics.boxes.numAnswersMand=Número de respuestas recibidas con todas las preguntas obligatorias
+statistics.boxes.numAnswersNotMand=Número de respuestas recibidas con todas las preguntas
+statistics.boxes.bounceRate=Respuestas recibidas a todas las preguntas obligatorias / Visita
+statistics.boxes.bounceRateMandatory=Respuestas recibidas a todas las preguntas / Visita
 statistics.single.title=Respuestas recibidas
-statistics.boxes.numAnswersByOption=Número de respuestas / Opción (%)
+statistics.boxes.numAnswersByOption=Número de respuestas recibidas / Opción (%)
 statistics.menu.default=-Escoge pregunta-
 statistics.matrix.none=Ninguna
