modulo de cuotasvbeta

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -433,3 +433,6 @@ survey.type.option=Option
 quota.add.new=Add new Quota
 quota.create.new=Create new cuota
 quota.select= Select quota
+quota.edit.title=Survey quotas
+quota.add.new=Add new quota
+quota.select.question=Select question
