--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -434,3 +434,6 @@ survey.type.option=Opcion
 quota.add.new=Añadir nueva cuota
 quota.create.new=Crear nueva cuota
 quota.select= Seleccionar cuota
+quota.edit.title=Cuotas Encuesta
+quota.add.new=Añadir nueva cuota
+quota.select.question=Selecciona una pregunta
