El títilo de las secciones ya no es editable y aparece con otro texto, y no hay combo para el tipo de pregunta

--- a/SurveyTool/WebContent/_locales/lang_en2.properties
+++ b/SurveyTool/WebContent/_locales/lang_en2.properties
@@ -229,6 +229,8 @@ survey.edit.info.label.project=for project
 survey.edit.info.label.short_description=Short description
 survey.edit.info.label.url=Survey URL
 survey.edit.section.title=Section title
+survey.edit.section.listQuestions=List of questions
+survey.edit.section.list=Sección
 
 #******************
 # Poll
