--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -309,6 +309,8 @@ survey.edit.info.label.project=for project
 survey.edit.info.label.short_description=Short description
 survey.edit.info.label.url=Survey URL
 survey.edit.section.title=Section title
+survey.edit.section.list=Section
+survey.edit.section.listQuestions=List of questions
 survey.edit.page.title=Page
 
 #******************
