--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -309,6 +309,8 @@ survey.edit.info.label.short_description=Descripcion corta
 survey.edit.info.label.url=URL de la Encuesta
 survey.edit.section.title=Titulo Seccion
 survey.edit.page.title=Página
+survey.edit.section.list=Sección
+survey.edit.section.listQuestions=Lista de preguntas
 
 #******************
 # Poll
