--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -437,3 +437,10 @@ quota.select= Seleccionar cuota
 quota.edit.title=Cuotas Encuesta
 quota.add.new=Añadir nueva cuota
 quota.select.question=Selecciona una pregunta
+quota.add.warning.title = Aviso
+quota.add.warning.text = Ya existe una cuota para esa pregunta.
+quota.add.warning.button = Aceptar
+quota.title.section1 = Overall response quota
+quota.text.section1 = Please, specify the limits of responses received for this survey. You can set a minimum of responses expected, so dissemination efforts will continue until you reach this limit. You can also set a maximum, so the access to the survey will be disabled when you reach this number. These limits will also be used to monitor your advances in the dissemination and completion of the survey.
+quota.title.section2 = Question-based quotas
+quota.text.section2 = You can use the responses to key question to define quotas for certain user profiles. For example, if you have a question on "Gender" and you have two options (female / male) you can define a minimum and maximum of female or male participants. These limits will be used to monitor your advances in the dissemination and completion of the survey.
