--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -279,8 +279,8 @@ survey.edit.info.label.short_description=Short description
 survey.edit.info.label.url=Survey URL
 survey.edit.section.title=Section title
 
-survey.fees.label.objective=Objective
-survey.fees.label.surveys=surveys
+survey.fees.label.objective=Limit to 
+survey.fees.label.surveys=responses received
 
 #******************
 # Poll
