body content sin división de campo

--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -446,6 +446,36 @@ profile.confirm.update.title=Confirmation profile data
 profile.button.accept=Accept
 
 #******************
+# body content
+#******************
+bcontent.title=Body content
+bcontent.statement=Text for body content
+accesibility.bcontent=Below write text for the body content. Use Ctrl/Cmd+B for bold; Ctrl/Cmd+I for italic; Ctrl/Cmd+U to underline; Shift+Tab to reduce indent; Tab to increase indent; Ctrl/Cmd+L to align left; Ctrl/Cmd+E to center; Ctrl/Cmd+R to align right; Ctrl/Cmd+J to justify; Ctrl/Cmd+Z to undo; y Ctrl/Cmd+Y to redo.
+
+bcontent.font=Font
+bcontent.font.size=Font Size
+bcontent.huge=Huge
+bcontent.normal=Normal
+bcontent.small=Small
+bcontent.bold=Bold (Ctrl/Cmd+B)
+bcontent.italic=Italic (Ctrl/Cmd+I)
+bcontent.strikethrough = Strikethrough
+bcontent.underline=Underline (Ctrl/Cmd+U)
+bcontent.bullet=Bullet list
+bcontent.number=Number list
+bcontent.reduce=Reduce indent (Shift+Tab)
+bcontent.indent=Indent (Tab)
+bcontent.left=Align Left (Ctrl/Cmd+L)
+bcontent.center=Center (Ctrl/Cmd+E)
+bcontent.right=Align Right (Ctrl/Cmd+R)
+bcontent.justify=Justify (Ctrl/Cmd+J)
+bcontent.hyperlink=Hyperlink
+bcontent.add=Add
+bcontent.remove=Remove Hyperlink
+bcontent.undo=Undo (Ctrl/Cmd+Z)
+bcontent.redo=Redo (Ctrl/Cmd+Y)
+
+#******************
 # Types suveys
 #******************
 survey.select.question.type=Select question type
