--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -445,6 +445,37 @@ profile.confirm.update.msg=Los datos del perfil se han actualizado correctamente
 profile.confirm.update.title=Confirmación datos perfil
 profile.button.accept=Aceptar
 
+
+#******************
+# body content
+#******************
+bcontent.title=Texto introductorio
+bcontent.statement=Texto para la descripción
+accesibility.bcontent=A continuación escribe el contenido del texto introductorio. Usa Ctrl/Cmd+B para negrita; Ctrl/Cmd+I para cursiva; Ctrl/Cmd+U para subrayar; Shift+Tab para reducir sangría; Tab para aumentar sangría; Ctrl/Cmd+L para alinear izquierda; Ctrl/Cmd+E para centrar; Ctrl/Cmd+R para alinear a la derecha; Ctrl/Cmd+J para justificar; Ctrl/Cmd+Z para deshacer; y Ctrl/Cmd+Y para rehacer.
+
+bcontent.font=Fuente
+bcontent.font.size=Tamaño fuente
+bcontent.huge=Grande
+bcontent.normal=Normal
+bcontent.small=Pequeña
+bcontent.bold=Negrita (Ctrl/Cmd+B)
+bcontent.italic=Cursiva (Ctrl/Cmd+I)
+bcontent.strikethrough = Tachado
+bcontent.underline=Subrayado (Ctrl/Cmd+U)
+bcontent.bullet=Lista de puntos
+bcontent.number=Lista numerada
+bcontent.reduce=Reducir sangría (Shift+Tab)
+bcontent.indent=Aumentar sangría (Tab)
+bcontent.left=Alinear izquierda (Ctrl/Cmd+L)
+bcontent.center=Centrar (Ctrl/Cmd+E)
+bcontent.right=Alinear derecha (Ctrl/Cmd+R)
+bcontent.justify=Justificar (Ctrl/Cmd+J)
+bcontent.hyperlink=Hipervínculo
+bcontent.add=Añadir
+bcontent.remove=Quitar hipervínculo
+bcontent.undo=Deshacer (Ctrl/Cmd+Z)
+bcontent.redo=Rehacer (Ctrl/Cmd+Y)
+
 #******************
 # Types suveys
 #******************
