Visually hideen button in editor

--- a/SurveyTool/WebContent/_locales/lang_en2.properties
+++ b/SurveyTool/WebContent/_locales/lang_en2.properties
@@ -303,7 +303,10 @@ accesibility.question.image=Question image
 accesibility.question.longtextAnswer= Textarea to input your answer
 accesibility.question.shorttextAnswer= Textarea to input your answer
 
-
+button.accesibility_help=Click to know the available editor shortcuts in the editable area below
+accesibility.window.title=Editor shortcuts
+accesibility.window.subtitle=Use the following shortcuts to change the format of text
+accesibility.window.info=<ul><li>Ctrl/Cmd+B for bold</li><li>Ctrl/Cmd+I for italic</li><li>Ctrl/Cmd+U to underline</li><li>Shift+Tab to reduce indent</li><li>Tab to increase indent</li><li>Ctrl/Cmd+L to align left</li><li>Ctrl/Cmd+E to center</li><li>Ctrl/Cmd+R to align right</li><li>Ctrl/Cmd+J to justify</li><li>Ctrl/Cmd+Z to undo</li><li>Ctrl/Cmd+Y to redo</li></ul>
 
 #******************
 # body content
