--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -429,6 +429,11 @@ accesibility.question.image=Imagen de la pregunta
 accesibility.question.longtextAnswer=Textarea para introducir tu respuesta
 accesibility.question.shorttextAnswer=Textarea para introducir tu respuesta
 
+button.accesibility_help=Haz click para conocer los atajos de teclado disponibles en el editor de texto de debajo
+accesibility.window.title=Atajos de teclado para el editor
+accesibility.window.subtitle=Usa los siguienets atajos de teclado para cambair el formato del texto
+accesibility.window.info=<ul><li>Ctrl/Cmd+B para poner en negrita</li><li>Ctrl/Cmd+I para poner en cursiva</li><li>Ctrl/Cmd+U para subrayar</li><li>Shift+Tab para reducir la sangría</li><li>Tab para incrementar la sangría</li><li>Ctrl/Cmd+L para alinear a la izquierda</li><li>Ctrl/Cmd+E para centrar</li><li>Ctrl/Cmd+R para alinear a la derecha</li><li>Ctrl/Cmd+J para justificar el texto</li><li>Ctrl/Cmd+Z para deshacer</li><li>Ctrl/Cmd+Y para rehacer</li></ul>
+
 #******************
 # profile user
 #******************
