change in no default message

--- a/SurveyTool/WebContent/_locales/lang_en2.properties
+++ b/SurveyTool/WebContent/_locales/lang_en2.properties
@@ -119,6 +119,7 @@ survey_manager.surveys.table.column.actions=Actions
 survey_manager.surveys.msg.no_surveys=There are not surveys created by you.
 survey_manager.surveys.no_default_language=You have selected a language which is not the default language of the survey. In this version you will be able to change statements and texts, but you are not allowed to add/delete questions or modify the structure of the survey. If you want to make such modifications, please switch to the default language version. 
 survey_manager.surveys.default=Default
+survey_manager.surveys.notice=Important notice:
 
 #Polls
 survey_manager.polls.title=Online polling tool
