--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -171,6 +171,7 @@ survey_manager.surveys.msg.no_surveys=No hay encuestas creadas por ti.
 survey_manager.surveys.table.survey_responses=encuestas
 survey_manager.surveys.no_default_language=Ha seleccionado un idioma que no es el idioma predeterminado de la encuesta. En esta versión va a poder cambiar los enunciados y textos, pero no se le permite añadir / eliminar preguntas o modificar la estructura de la encuesta. Si desea realizar dichas modificaciones, por favor, cambie al idioma por defecto de la encuesta.
 survey_manager.surveys.default=Por defecto
+survey_manager.surveys.notice=Información importante:
 
 #Polls
 survey_manager.polls.title=Herramienta de sondeo en línea
