--- a/SurveyTool/WebContent/_locales/lang_en.properties
+++ b/SurveyTool/WebContent/_locales/lang_en.properties
@@ -73,6 +73,8 @@ button.vote=Vote
 button.remove_section=Remove section
 button.hide_section=Hide section
 button.done=Done
+button.continue=Continue
+button.back=Back
 
 button.aria_label.add_content=Add new content
 
