--- a/SurveyTool/WebContent/_locales/lang_es.properties
+++ b/SurveyTool/WebContent/_locales/lang_es.properties
@@ -74,6 +74,8 @@ button.vote=Votar
 button.remove_section=Borrar sección
 button.hide_section=Ocultar sección
 button.done=Hecho
+button.continue=Continuar
+button.back=Volver
 
 button.aria_label.add_content=Añadir nuevo contenido
 
